prow/ingress/traefik-v2/ingress-routes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: prow
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: deck
  namespace: prow
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`k8s-sig-win-networking-prow.westus2.cloudapp.azure.com`)
    services:
    - name: deck
      port: 80
    middlewares:
      - name: https-redirect
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: deck-secure
  namespace: prow
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`k8s-sig-win-networking-prow.westus2.cloudapp.azure.com`)
    services:
    - name: deck
      port: 80
  tls:
    certResolver: le
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hook
  namespace: prow
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`k8s-sig-win-networking-prow.westus2.cloudapp.azure.com`) && PathPrefix(`/hook`)
    services:
    - name: hook
      port: 8888
    middlewares:
      - name: https-redirect
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hook-secure
  namespace: prow
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`k8s-sig-win-networking-prow.westus2.cloudapp.azure.com`) && PathPrefix(`/hook`)
    services:
    - name: hook
      port: 8888
  tls:
    certResolver: le
